feat: added session results migration when user is authorizing using RabbitMQ

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ DB_URL="mongodb://admin:pass@localhost:27017"
 CONSUL_HOST="localhost:8500"
 CONSUL_SERVICE_NAME="auth-service"
 CONSUL_SERVICE_ADDRESS="localhost"
+RABBITMQ_URL="amqp://guest:guest@localhost:5672/"
